--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -2,10 +2,10 @@
 
 nfs-client-provisioner is a Commodore component to manage nfs-client-provisioner.
 
-See the xref:references/parameters.adoc[parameters] reference for details on
-configurable options.
+See the xref:references/parameters.adoc[parameters] reference for details on configurable options.
 
-NOTE: This component uses https://github.com/projectsyn/component-storageclass[the Project Syn component storageclass] to create a storage class for the nfs-client-provisioner.
+NOTE: This component uses
+https://github.com/projectsyn/component-storageclass[the Project Syn component storageclass] to create one or more storage classes for the nfs-client-provisioner.
 Users of this component must include `components.storageclass` somewhere in their configuration hierarchy.
 
 == Prerequisites
